# lightnn

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
pkg/mod/cache/download/golang.org/x/tools/gopls/@v/: v0.12.2.info
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.12.2
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x069/: 398
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x069/398.p/: 53
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x069/466.p/: 63
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/271.p/: 22  90
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/2/001.p/: 15
pkg/sumdb/sum.golang.org/: latest
src/: layer.rs  lib.rs  op.rs  session.rs  tensor.rs
src/core/: mod.rs  node.rs  op.rs  tensor.rs
src/mnist/: mod.rs
src/onnx/: mod.rs  onnx.proto  onnx.rs
src/util/: error.rs
tests/: mod.rs
