[package]
name = "lightnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
mnist = "0.5.0"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_isaac = "0.3"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
galois = { path = "../galois", version = "0.1.0" }