[package]
name = "lightnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
mnist = "0.6.0"
rand = "0.8"
rand_isaac = "0.3"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
half = "2.3.1"
galois = { path = "../galois", version = "0.1.0" }
smallvec = "1.11.2"
rayon = "1.7.0"